# sponge-hash-aes256

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README-cargo.md  README.crates.md  README.md  SECURITY.md
.assets/html/: index.html
.assets/text/: goat.txt
.build/: cargo.fix-up.cmd  cargo.fix-up.sh  cargo.llvm-cov.cmd  cargo.llvm-cov.sh
.build/.auxiliary-files/blank-project/: Cargo.toml
.build/bsd-unix/: Makefile  build-dragonfly.sh  build-freebsd.sh  build-haiku.sh  build-macos.sh  build-netbsd.sh  build-openbsd.sh  build-solaris.sh  crossbuild-netbsd.sh
.build/bsd-unix/src/: lib.rs
.build/docker/: .gitignore  Dockerfile  build.sh  do-build.sh
.build/docker/resources/: launcher-386.sh  launcher-amd64.sh  launcher-arm64.sh
.build/freebsd/: Makefile  cross-build-from-linux.sh  crossbuild-linux.sh
.build/illumos/: Makefile
.build/linux/: GNUmakefile  mk-docker.sh
.build/linux/resources/: AppRun-aarch64.sh  AppRun-i686.sh  AppRun-x86_64.sh  sponge256sum.desktop  sponge256sum.xml
.build/macos/: GNUmakefile  Makefile
.build/netbsd/: Makefile  crossbuild-linux.sh
.build/openbsd/: Makefile
.build/unix/: Makefile  build-dragonfly.sh  build-freebsd.sh  build-haiku.sh  build-macos.sh  build-netbsd.sh  build-openbsd.sh  build-solaris.sh  crossbuild-freebsd.sh  crossbuild-netbsd.sh
.build/windows/: make.cmd
.build/windows/installer/: installer.nsi
.build/windows/nsis/: installer.nsi  license.rtf
.build/windows/resources/: LICENSE.rtf  app-icon.res  autorun.inf  build.nsi  setup.nsi
.cargo/: config.toml
.github/workflows/: ci.yml  monitor.yml
.github/workflows/monitor/: Cargo.toml
.github/workflows/monitor/src/: main.rs
app/: .RUSTC_VERSION  .rustfmt.toml  Cargo.toml  build.rs
app/.cargo/: config.toml
app/benches/: app_bench.rs
app/resources/: app-aarch64.manifest  app-x86.manifest  app-x86_64.manifest  app.manifest
app/src/: arguments.rs  common.rs  digest.rs  environment.rs  io.rs  main.rs  process.rs  process_files.rs  self_test.rs  thread_pool.rs  verify.rs  verify.z_old
app/src/os/: mod.rs  unix.rs  windows.rs
app/tests/: app_test.rs  app_tests.rs  test_app.rs
app/tests/common/: mod.rs  random.rs  utils.rs
app/tests/data/: SHA512SUMS.txt
app/tests/data/binary/: SHA512SUMS
app/tests/data/extra/: LICENSE
benches/: stress_test.rs
benches/data/: README.md
examples/: example_oneshot.rs  example_stream.rs
lib/: Cargo.toml
lib/.cargo/: config.toml
lib/benches/: lib_bench.rs  perf_test.rs  stress_test.rs
lib/benches/data/: README.md
lib/examples/: example_oneshot.rs  example_stream.rs
lib/src/: lib.rs  sponge_hash.rs  utilities.rs
lib/tests/: test_errors.rs  test_oneshot.rs  test_streaming.rs  test_version.rs
lib/tests/include/: common.rs  prelude.rs  utils.rs
src/: crypto.rs  lib.rs  sponge_hash.rs  utilities.rs
tests/: one_shot.rs  streaming.rs  test_oneshot.rs  test_streaming.rs  test_version.rs
tests/include/: common.rs
