[package]
name = "sponge-hash-aes256"
description = "A sponge-based secure hash function that uses AES-256 as its internal PRF"
license = "0BSD"
repository = "https://github.com/lordmulder/sponge-hash-aes256/"
readme = "README.crates.md"
version = "1.0.1"
edition = "2024"

[dependencies]
aes = { version = "0.8.4", default-features = false }
cipher = { version = "0.4.4", default-features = false }
log = { version = "0.4.28", default-features = false, optional = true }
zeroize = { version = "1.8.1", default-features = false }

[dev-dependencies]
hex-literal = "1.0.0"
simple_logger = { version = "5.0.0", default-features = false }

[features]
default = []
logging = ["dep:log"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
