[package]
name = "sponge256sum"
description = "A sponge-based secure hash function that uses AES-256 as its internal PRF"
authors = ["LoRd_MuldeR <mulder2@gmx.de>"]
license = "0BSD"
repository = "https://github.com/lordmulder/sponge-hash-aes256/"
readme = "../README-cargo.md"
edition = "2021"
version = "1.9.2"
categories = ["algorithms", "cryptography", "no-std", "security"]
keywords = ["hash", "digest", "sponge", "crypto", "aes"]

[dependencies]
build-time = { version = "0.1.3", default-features = false }
clap = { version = "4.6.1", default-features = true, features = ["derive"] }
const_format = { version = "0.2.36", default-features = false }
crossbeam-channel = { version = "0.5.15", default-features = false, features = ["std"] }
ctrlc = { version = "3.5.2", default-features = false }
hex = { version = "0.4.3", default-features = true }
hex-literal = { version = "1.1.0", default-features = false }
imbl = { version = "7.0.0", default-features = false }
num = { version = "0.4.3", default-features = false }
rand_pcg = { version = "0.10.2", default-features = false }
rolling-median = { version = "1.5.5", default-features = false }
rustc-version-const = { version = "1.1.0", default-features = false }
sponge-hash-aes256 = { path = "../lib", default-features = false }
tinyvec = { version = "1.11.0", default-features = false, features = ["alloc"] }
wild = { version = "2.2.1", default-features = false }

# Optional dependencies
mimalloc = { version = "0.1.50", default-features = false, optional = true }
simple_logger = { version = "5.2.0", default-features = false, optional = true }

[features]
default = []
with-logging = ["sponge-hash-aes256/tracing", "dep:simple_logger"]
with-mimalloc = ["dep:mimalloc"]

[dev-dependencies]
drop-root-caps = { version = "1.2.1", default-features = false, features = ["ctor"] }
nix = { version = "0.31.2", default-features = false, features = ["signal"] }
regex = { version = "1.12.3", default-features = false, features = ["unicode"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.186", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", default-features = false, features = ["Win32_Storage_FileSystem"] }

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1.12", default-features = false }

[package.metadata.winres]
Comments = "SPDX-License-Identifier: 0BSD"
CompanyName = "LoRd_MuldeR <mulder2@gmx.de>"
FileDescription = "SpongeHash-AES256 command-line application"
InternalName = "sponge256sum"
LegalCopyright = "Copyright © 2025-2026 by LoRd_MuldeR <mulder2@gmx.de>"
OriginalFilename = "sponge256sum.exe"
ProductName = "SpongeHash-AES256"

[[bench]]
name = "app_bench"
harness = false
