[package]
name = "sponge-hash-aes256"
description = "A sponge-based secure hash function that uses AES-256 as its internal PRF"
authors = ["LoRd_MuldeR <mulder2@gmx.de>"]
license = "0BSD"
repository = "https://github.com/lordmulder/sponge-hash-aes256/"
readme = "../README.crates.md"
edition = "2021"
version = "1.7.0"
categories = ["algorithms", "cryptography", "no-std", "security"]
keywords = ["hash", "digest", "sponge", "crypto", "aes"]

[package.metadata]
no_std = true

[dependencies]
aes = "0.9.0-rc.2"
wide = "0.8.3"
zeroize = "1.8.2"

# Optional dependencies
log = { version = "0.4.28", default-features = false, optional = true }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "1.1.0", default-features = false }
rolling-median = { version = "1.2.0", default-features = false }
semver = { version = "1.0.27", default-features = false }
simple_logger = { version = "5.1.0", default-features = false }

[features]
default = []
tracing = ["dep:log"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[[bench]]
name = "perf_test"
harness = false

[[bench]]
name = "stress_test"
harness = false
