[package]
name = "sponge-hash-aes256"
description = "A sponge-based secure hash function that uses AES-256 as its internal PRF"
authors = ["LoRd_MuldeR <mulder2@gmx.de>"]
license = "0BSD"
repository = "https://github.com/lordmulder/sponge-hash-aes256/"
readme = "../README-cargo.md"
edition = "2021"
version = "1.8.4"
categories = ["algorithms", "cryptography", "no-std", "security"]
keywords = ["hash", "digest", "sponge", "crypto", "aes"]

[package.metadata]
no_std = true

[dependencies]
aes = "0.9.0-rc.4"
wide = "1.1.1"
zeroize = "1.8.2"

# Optional dependencies
log = { version = "0.4.29", default-features = false, optional = true }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "1.1.0", default-features = false }
rolling-median = { version = "1.5.5", default-features = false }
semver = { version = "1.0.27", default-features = false }
simple_logger = { version = "5.1.0", default-features = false }

[features]
default = []
tracing = ["dep:log"]

[[bench]]
name = "perf_test"
harness = false

[[bench]]
name = "stress_test"
harness = false
